@@ -318,41 +318,41 @@ class SbomServiceTest {
                 .findFirst().orElse(null);
         assertThat(pkg).isNotNull();
 
-        PageVo<VulnerabilityVo> result = sbomService.queryVulnerabilityByPackageId(pkg.getId().toString(), PageRequest.of(0, 15, Sort.by("all_vul.v_vul_id")));
+        PageVo<VulnerabilityVo> result = sbomService.queryVulnerabilityByPackageId(pkg.getId().toString(), PageRequest.of(0, 15));
         assertThat(result).isNotEmpty();
         assertThat(result.getTotalElements()).isEqualTo(3);
         assertThat(result.getTotalPages()).isEqualTo(1);
 
-        assertThat(result.getContent().get(0).getVulId()).isEqualTo("CVE-2022-00000-test");
-        assertThat(result.getContent().get(0).getScoringSystem()).isEqualTo("CVSS3");
-        assertThat(result.getContent().get(0).getScore()).isEqualTo(5.3);
-        assertThat(result.getContent().get(0).getVector()).isEqualTo("CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:L/I:N/A:N");
-        assertThat(result.getContent().get(0).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
-        assertThat(result.getContent().get(0).getReferences().size()).isEqualTo(2);
-        assertThat(result.getContent().get(0).getReferences().get(0).getFirst()).isEqualTo("NVD");
-        assertThat(result.getContent().get(0).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00000-test");
-        assertThat(result.getContent().get(0).getReferences().get(1).getFirst()).isEqualTo("OSS_INDEX");
-        assertThat(result.getContent().get(0).getReferences().get(1).getSecond()).isEqualTo("https://ossindex.sonatype.org/vulnerability/sonatype-2022-00000-test");
-
-        assertThat(result.getContent().get(1).getVulId()).isEqualTo("CVE-2022-00001-test");
-        assertThat(result.getContent().get(1).getScoringSystem()).isEqualTo("CVSS2");
-        assertThat(result.getContent().get(1).getScore()).isEqualTo(9.8);
-        assertThat(result.getContent().get(1).getVector()).isEqualTo("(AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H)");
-        assertThat(result.getContent().get(0).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
-        assertThat(result.getContent().get(1).getReferences().size()).isEqualTo(1);
-        assertThat(result.getContent().get(1).getReferences().get(0).getFirst()).isEqualTo("NVD");
-        assertThat(result.getContent().get(1).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00001-test");
-
-        assertThat(result.getContent().get(2).getVulId()).isEqualTo("CVE-2022-00002-test");
-        assertThat(result.getContent().get(2).getScoringSystem()).isNull();
-        assertThat(result.getContent().get(2).getScore()).isNull();
-        assertThat(result.getContent().get(2).getVector()).isNull();
-        assertThat(result.getContent().get(0).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
+        assertThat(result.getContent().get(2).getVulId()).isEqualTo("CVE-2022-00000-test");
+        assertThat(result.getContent().get(2).getScoringSystem()).isEqualTo("CVSS3");
+        assertThat(result.getContent().get(2).getScore()).isEqualTo(5.3);
+        assertThat(result.getContent().get(2).getVector()).isEqualTo("CVSS:3.1/AV:N/AC:L/PR:N/UI:N/S:U/C:L/I:N/A:N");
+        assertThat(result.getContent().get(2).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
         assertThat(result.getContent().get(2).getReferences().size()).isEqualTo(2);
         assertThat(result.getContent().get(2).getReferences().get(0).getFirst()).isEqualTo("NVD");
-        assertThat(result.getContent().get(2).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00002-test");
-        assertThat(result.getContent().get(2).getReferences().get(1).getFirst()).isEqualTo("GITHUB");
-        assertThat(result.getContent().get(2).getReferences().get(1).getSecond()).isEqualTo("https://github.com/xxx/xxx/security/advisories/xxx");
+        assertThat(result.getContent().get(2).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00000-test");
+        assertThat(result.getContent().get(2).getReferences().get(1).getFirst()).isEqualTo("OSS_INDEX");
+        assertThat(result.getContent().get(2).getReferences().get(1).getSecond()).isEqualTo("https://ossindex.sonatype.org/vulnerability/sonatype-2022-00000-test");
+
+        assertThat(result.getContent().get(0).getVulId()).isEqualTo("CVE-2022-00001-test");
+        assertThat(result.getContent().get(0).getScoringSystem()).isEqualTo("CVSS2");
+        assertThat(result.getContent().get(0).getScore()).isEqualTo(9.8);
+        assertThat(result.getContent().get(0).getVector()).isEqualTo("(AV:N/AC:L/PR:N/UI:N/S:U/C:H/I:H/A:H)");
+        assertThat(result.getContent().get(0).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
+        assertThat(result.getContent().get(0).getReferences().size()).isEqualTo(1);
+        assertThat(result.getContent().get(0).getReferences().get(0).getFirst()).isEqualTo("NVD");
+        assertThat(result.getContent().get(0).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00001-test");
+
+        assertThat(result.getContent().get(1).getVulId()).isEqualTo("CVE-2022-00002-test");
+        assertThat(result.getContent().get(1).getScoringSystem()).isEqualTo("CVSS2");
+        assertThat(result.getContent().get(1).getScore()).isEqualTo(7.5);
+        assertThat(result.getContent().get(1).getVector()).isEqualTo("AV:N/AC:L/Au:N/C:P/I:P/A:P");
+        assertThat(result.getContent().get(1).getPurl()).isEqualTo("pkg:pypi/asttokens@2.0.5");
+        assertThat(result.getContent().get(1).getReferences().size()).isEqualTo(2);
+        assertThat(result.getContent().get(1).getReferences().get(0).getFirst()).isEqualTo("NVD");
+        assertThat(result.getContent().get(1).getReferences().get(0).getSecond()).isEqualTo("http://web.nvd.nist.gov/view/vuln/detail?vulnId=CVE-2022-00002-test");
+        assertThat(result.getContent().get(1).getReferences().get(1).getFirst()).isEqualTo("GITHUB");
+        assertThat(result.getContent().get(1).getReferences().get(1).getSecond()).isEqualTo("https://github.com/xxx/xxx/security/advisories/xxx");
 
     }
 
